# slicer-apidocs

./: .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  dox_build.sh  publish_apidocs.py  pyproject.toml  requirements.txt  setup.py
slicer_apidocs_builder/: CMakeLists.txt  __init__.py  __main__.py  utils.py
